--- a/templates/login.html
+++ b/templates/login.html
@@ -13,5 +13,6 @@
         {{ form.password }}
         {{ form.submit }}
     </form>
+    <a href="{{ url_for('register') }}">Don't have an account?</a>
 </body>
 </html>
