--- a/templates/register.html
+++ b/templates/register.html
@@ -15,5 +15,6 @@
         {{ form.password }}
         {{ form.submit }}
     </form>
+    <a href="{{ url_for('login') }}">Already Have an Account?</a>
 </body>
 </html>
