--- a/templates/index.html
+++ b/templates/index.html
@@ -41,9 +41,9 @@
     <p>
         Your Number: {{ user.number }}
     </p>
-    <button class="btn btn-primary" id="start-btn" onclick="startWebcam()">Start Webcam</button>
-    <button class="btn btn-primary" disabled id="stop-btn" onclick="stopWebcam()">Stop Webcam</button>
-    <a class="btn btn-outline-warning" href="{{ url_for('logout') }}">Logout</a>
+    <button class="btn btn-success" id="start-btn" onclick="startWebcam()">Start Webcam</button>
+    <button class="btn btn-danger" disabled id="stop-btn" onclick="stopWebcam()">Stop Webcam</button>
+    <a class="btn btn-warning" href="{{ url_for('logout') }}">Logout</a>
     <script
       type="text/javascript"
       src="{{url_for('static', filename='script/index.js')}}"
