--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE-edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Drowsiness Detection</title>
+    <title>Drowsiness Detection and Head Pose Estimation</title>
 
     <!-- Bootstrap CDN -->
     <link
@@ -22,6 +22,7 @@
       rel="stylesheet"
     />
 
+    <!-- Global CSS File -->
     <link
       rel="stylesheet"
       type="text/css"
@@ -32,31 +33,13 @@
     <script>
       const baseVideoUrl = "{{ url_for('video') }}";
     </script>
-    <style>
-        .centered {
-            text-align: center;
-            margin-top: 2rem;
-        }
-        img {
-            margin-left: 35%;
-            margin-top: 2rem;
-        }
-    </style>
   </head>
   <body>
-    <h1 class="text-center fw-bold">Drowsiness Detection</h1>
-    <div class="centered">
-    <h1>
-        Welcome, {{ user.name }} {{ user.surname }}!
-    </h1>
-    <p>
-        Your Number: {{ user.number }}
-    </p>
-    <button class="btn btn-success" id="start-btn" onclick="startWebcam()">Start Webcam</button>
-    <button class="btn btn-danger" disabled id="stop-btn" onclick="stopWebcam()">Stop Webcam</button>
-    
-    <a class="btn btn-warning" href="{{ url_for('logout') }}">Logout</a>
-</div>
+    <h1 class="text-center fw-bold">Drowsiness Detection and Head Pose Estimation</h1> 
+    <div class="text-center">
+      <button class="btn btn-success" id="start-btn" onclick="startWebcam()">Start Webcam</button>
+      <button class="btn btn-danger" disabled id="stop-btn" onclick="stopWebcam()">Stop Webcam</button>
+    </div>
     <script
       type="text/javascript"
       src="{{url_for('static', filename='script/index.js')}}"
